--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,108 +1,377 @@
 :root {
-    --main-color: #000;
-    --sub-color: #000;
-    --w-color: #000;
-    --b-color: #000;
-    --main-text-color: #000;
-    --sub-text-color: #000;
+    --header-height: 3.5rem;
 
-    --fw-Medium-500: 500;
-    --fw-SemiBold-600: 600;
-    --fw-Bold-700: 700;
-    --fw-ExtraBold-800 : 800;
+    /*========== Colors ==========*/
+    /*Color mode HSL(hue, saturation, lightness)*/
+    --first-color: hsl(28, 88%, 62%);
+    --first-color-alt: hsl(28, 84%, 58%);
+    --title-color: hsl(0, 0%, 95%);
+    --text-color: hsl(0, 0%, 75%);
+    --text-color-light: hsl(0, 0%, 65%);
+    --black-color: hsl(0, 0%, 6%);
+    --body-color: hsl(0, 0%, 6%);
+    --container-color: hsl(0, 0%, 10%);
 
-    --transition-3: ease 0.3s;
-    --transition-5: ease 0.5s;
+    /*========== Font and typography ==========*/
+    /*.5rem = 8px | 1rem = 16px ...*/
+    --body-font: "Montserrat", sans-serif;
+    --second-font: "Dancing Script", cursive;
+    --biggest-font-size: 3rem;
+    --bigger-font-size: 2rem;
+    --h1-font-size: 1.5rem;
+    --h2-font-size: 1.25rem;
+    --h3-font-size: 1rem;
+    --normal-font-size: .938rem;
+    --small-font-size: .813rem;
+
+    /*========== Font weight ==========*/
+    --font-regular: 400;
+    --font-semi-bold: 600;
+    --font-bold: 700;
+
+    /*========== z index ==========*/
+    --z-tooltip: 10;
+    --z-fixed: 100;
 }
+
+@media screen and (min-width: 1150px) {
+    :root {
+        --biggest-font-size: 5rem;
+        --bigger-font-size: 3rem;
+        --h1-font-size: 2.25rem;
+        --h2-font-size: 1.5rem;
+        --h3-font-size: 1.25rem;
+        --normal-font-size: 1rem;
+        --small-font-size: .875rem;
+    }
+}
+
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
 }
 
-@media (max-width: 786px) {
-    h2 {
-        font-size: 25px;
-    }
 
-    h3 {
-        font-size: 20px;
-    }
-
-    p {
-        font-size: 16px;
-    }
-
-    a {
-        font-size: 14px;
-    }
+html {
+    scroll-behavior: smooth;
 }
 
-@media (max-width: 450px) {
-    h2 {
-        font-size: 20px;
-    }
-
-    h3 {
-        font-size: 18px;
-    }
-
-    p {
-        font-size: 14px;
-    }
-
-    a {
-        font-size: 12px;
-    }
+body,
+button {
+    font-family: var(--body-font);
+    font-size: var(--normal-font-size);
 }
 
-@media (max-width: 350px) {
-    h2 {
-        font-size: 18px;
-    }
+body {
+    background-color: var(--body-color);
+    color: var(--text-color);
+    height: 30000px;
+}
 
-    h3 {
-        font-size: 16px;
-    }
+button {
+    border: none;
+    outline: none;
+}
 
-    p {
-        font-size: 12px;
-    }
-
-    a {
-        font-size: 10px;
-    }
+h1,
+h2,
+h3,
+h4 {
+    color: var(--title-color);
+    font-weight: var(--font-bold);
 }
 
 ul {
-    display: flex;
+    list-style: none;
 }
 
-img,
 a {
-    display: none;
+    text-decoration: none;
+}
+
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+ul {
+    list-style: none;
 }
 
 .container {
-    padding-inline: 15px;
-    margin-inline: auto;
+    max-width: 1120px;
+    margin-inline: 1.5rem;
 }
 
-@media (min-width: 786px) {
-    .container {
-        width: 750px;
-    }
+.grid {
+    display: grid;
+    gap: 1.5rem;
 }
 
-@media (min-width: 991px) {
-    .container {
-        width: 970px;
-    }
+.section {
+    padding-block: 5rem 1rem;
 }
 
-@media (min-width: 1199px) {
-    .container {
-        width: 1150px;
+.section__title {
+    font-size: var(--bigger-font-size);
+    font-family: var(--second-font);
+    margin-bottom: 1.5rem;
+    text-align: center;
+}
+
+.main {
+    overflow: hidden;
+    /* For animation ScrollReveal */
+}
+
+/* Button */
+.button {
+    position: relative;
+    display: inline-flex;
+    color: var(--first-color);
+    border: 1px solid var(--first-color);
+    font-weight: var(--font-semi-bold);
+    padding: 1.125rem 2rem;
+    transition: color 0.4s;
+    overflow: hidden;
+}
+.button::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background-color: var(--first-color);
+    transition: left 0.4s;
+    z-index: -1;
+}
+.button:hover::after {
+    left: 0%;
+}
+.button:hover {
+    color: var(--black-color);
+}
+/* Button */
+
+/* Start Header */
+.header {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: transparent;
+    z-index: var(--z-fixed);
+}
+.blur_header::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 1000%;
+    height: 100%;
+    background-color: hsla(0, 0, 6%, 0.2);
+    backdrop-filter: blur(16px);
+    -webkit-backdrop-filter: blur(16px);
+    z-index: -1;
+}
+.nav {
+    position: relative;
+    height: var(--header-height);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.nav_logo {
+    color: var(--first-color);
+    font-size: var(--h2-font-size);
+    font-family: var(--second-font);
+    transition: color 0.4s;
+}
+
+.nav_logo:hover {
+    color: var(--first-color-alt);
+}
+
+.nav_open,
+.nav_close {
+    cursor: pointer;
+    font-size: 1.5rem;
+    color: var(--title-color);
+    display: none;
+}
+
+
+
+
+@media screen and (max-width: 1150px) {
+    .nav_close,
+    .nav_open {
+        display: block;
+    }
+
+    .nav_menu {
+        position: fixed;
+        top: 0;
+        right: -100%;
+        background-color: hsla(0, 0, 6%, 0.2);
+        backdrop-filter: blur(16px);
+        -webkit-backdrop-filter: blur(16px);
+        width: 80%;
+        height: 100vh;
+        padding: 6rem 3rem 0;
+        transition: right 0.4s;
+    }
+
+    .nav_list {
+        display: flex;
+        flex-direction: column;
+        row-gap: 2.5rem;
+    }
+
+    .nav_link {
+        color: var(--title-color);
+        font-weight: var(--font-semi-bold);
+        transition: color 0.4s;
+    }
+
+    .nav_link:hover {
+        color: var(--first-color);
+    }
+    
+    .nav_link.active {
+        color: var(--first-color);
+    }
+
+    .nav_close,
+    .nav_img-1, 
+    .nav_img-2 {
+        position: absolute;
+    }
+
+    .nav_close {
+        top: 1rem;
+        right: 1.5rem;
+    }
+
+    .nav_img-1 {
+        width: 80px;
+        top: 11rem;
+        right: 0.75rem;
+    }
+
+    .nav_img-2 {
+        width: 60px;
+        top: 28rem;
+        right: 6rem;
+    }
+
+    .show_menu {
+        right: 0;
     }
 }
+/* End Header */
+/* Start Home */
+
+.home {
+    position: relative;
+    padding-top: 6.5rem;
+}
+
+.home_container {
+    row-gap: 2rem;
+}
+
+.home_bg,
+.home_shadow {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+.home_bg {
+    object-fit: cover;
+    object-position: center;
+}
+
+.home_shadow {
+    background: linear-gradient(180deg, 
+                hsla(0, 0%, 0%, 0) 0%,
+                hsl(0, 0%, 6%) 100%);
+}
+
+.home_data {
+    position: relative;
+    text-align: center;
+}
+
+.home_title {
+    font-size: var(--biggest-font-size);
+    font-family: var(--second-font);
+    margin-bottom: 1.5rem;
+}
+
+.home_bread {
+    width: 50px;
+    position: absolute;
+    top: 15rem;
+    left: 4rem;
+}
+
+.home_image {
+    max-width: 400px;
+    justify-self: center;
+}
+
+.home_img {
+    rotate: 15deg;
+}
+
+.home_footer,
+.home_location,
+.home_social {
+    display: flex;
+    align-items: center;
+    column-gap: 0.5rem;
+}
+
+.home_footer {
+    justify-content: space-between;
+}
+
+.home_location {
+    column-gap: 0.5rem;
+}
+
+.home_location svg {
+    font-size: 1.5rem;
+    color: var(--first-color);
+}
+
+.home_location span {
+    color: var(--title-color);
+    font-size: var(--small-font-size);
+}
+
+.home_social {
+    column-gap: 1rem;
+}
+
+.home_social a {
+    color: var(--title-color);
+    font-size: 1.5rem;
+    transition: color 0.4s;
+}
+
+.home_social a:hover {
+    color: var(--first-color);
+}
+/* End Home */
