--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -674,56 +674,116 @@ button {
 }
 /* End Scroll Up */
 
-/* Start Shopping */
-.shopping {
-    position: fixed;
-    top: 0;
-    right: -300px;
-    width: 300px;
-    background-color: hsla(0, 0, 6%, 0.2);
-    backdrop-filter: blur(16px);
-    -webkit-backdrop-filter: blur(16px);
-    min-height: 100vh;
-    transition: right 0.4s;
-}
-.shopping.open {
-    right: 0;
-}
-.shopping_icon {
-    position: absolute;
-    top: 70px;
-    left: -36px;
-    cursor: pointer;
-}
-.shopping_icon svg {
-    width: 30px;
-    height: 30px;
+/* For Small Device */
+@media (max-width: 340px) {
+    .container {
+        margin-inline: 1rem;
+    }
+
+    .home_title {
+        font-size: 2.5rem;
+    }
+
+    .home_footer {
+        flex-direction: column;
+        row-gap: 2rem;
+    }
+
+    .new_content {
+        grid-template-columns: 200px;
+        justify-content: center;
+    }
+
+    .new_card {
+        flex-direction: column;
+        row-gap: 1rem;
+        text-align: center;
+    }
+
+    .new_card:nth-child(2) img {
+        order: initial;
+    }
+
+    .favorite_container {
+        grid-template-columns: 180px;
+        justify-content: center;
+    }
+
+    .footer_content {
+        grid-template-columns: max-content;
+    }
 }
 
-.shopping_data {
-    display: flex;
-    align-items: center;
-    gap: 1.5rem;
-    margin-bottom: 20px;
-    padding-bottom: 1rem;
+/* For Medium Device */
+@media (max-width: 576px) {
+    .nav_menu {
+        width: 50%;
+    }
+
+    .home_container,
+    .new_content,
+    .about_container,
+    .visit_content {
+        grid-template-columns: 350px;
+        justify-content: center;
+    }
+
+    .favorite_container {
+        grid-template-columns: repeat(2, 180px);
+        justify-content: center;
+    }
+
+    .footer_content {
+        grid-template-columns: repeat(2, max-content);
+    }
 }
 
-.shopping_data:not(:last-child) {
-    border-bottom: 1px solid;
-}
+@media (min-width: 768px) {
+    .home {
+        padding-top: 3rem;
+    }
 
-.shopping_img img {
-    width: 80px;
-}
+    .home_container {
+        grid-template-columns: repeat(2, 350px);
+        align-items: center;
+    }
 
-.total {
-    position: fixed;
-    bottom: 0;
-    width: 85%;
-    padding-bottom: 20px;
-    display: flex;
-    justify-content: space-between;
-    font-weight: 700;
-    font-size: var(--h2-font-size);
+    .home_data {
+        text-align: initial;
+    }
+
+    .home_footer {
+        grid-column: 1 / 3;
+    }
+
+    .about_container {
+        grid-template-columns: repeat(2, 350px);
+        align-items: center;
+    }
+
+    .about_data {
+        order: 1;
+    }
+
+    .about_data,
+    .about_data .section_title {
+        text-align: initial;
+    }
+
+    .favorite_container {
+        grid-template-columns: (repeat(3, 180px));
+    }
+
+    .footer_container {
+        grid-template-columns: repeat(2, max-content);
+        justify-content: space-between;
+    }
+
+    .footer_img-1 {
+        top: 6rem;
+    }
+
+    .footer_img-2 {
+        top: 8rem;
+    }
 }
-/* End Shopping */
