--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -212,8 +212,56 @@ button {
     display: none;
 }
 
+.header .icon {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+}
 
+.shopping_car {
+    cursor: pointer;
+    position: relative;
+}
 
+.shopping_car a {
+    font-size: 1.5rem;
+    color: var(--title-color);
+}
+
+.number_proudct {
+    position: absolute;
+    top: -5px;
+    left: -5px;
+    padding: 5px;
+    background-color: var(--first-color);
+    height: 15px;
+    width: 15px;
+    color: var(--black-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+}
+
+.nav_list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2.5rem;
+}
+
+.nav_link {
+    color: var(--title-color);
+    font-weight: var(--font-semi-bold);
+    transition: color 0.4s;
+}
+
+.nav_link:hover {
+    color: var(--first-color);
+}
+
+.nav_link.active {
+    color: var(--first-color);
+}
 
 @media screen and (max-width: 1150px) {
     .nav_close,
@@ -246,25 +294,6 @@ button {
         transition: right 0.4s;
     }
 
-    .nav_list {
-        display: flex;
-        flex-direction: column;
-        row-gap: 2.5rem;
-    }
-
-    .nav_link {
-        color: var(--title-color);
-        font-weight: var(--font-semi-bold);
-        transition: color 0.4s;
-    }
-
-    .nav_link:hover {
-        color: var(--first-color);
-    }
-    
-    .nav_link.active {
-        color: var(--first-color);
-    }
 
     .nav_close,
     .nav_img-1, 
@@ -681,7 +710,7 @@ button {
     }
 
     .home_title {
-        font-size: 2.5rem;
+        font-size: 1.5rem;
     }
 
     .home_footer {
@@ -715,7 +744,7 @@ button {
 }
 
 /* For Medium Device */
-@media (max-width: 576px) {
+@media (min-width: 576px) {
     .nav_menu {
         width: 50%;
     }
@@ -771,19 +800,183 @@ button {
     }
 
     .favorite_container {
-        grid-template-columns: (repeat(3, 180px));
+        grid-template-columns: repeat(3, 180px);
     }
 
     .footer_container {
         grid-template-columns: repeat(2, max-content);
         justify-content: space-between;
     }
-
+    .footer_content {
+        grid-template-columns: repeat(3, max-content);
+    }
     .footer_img-1 {
         top: 6rem;
     }
 
     .footer_img-2 {
         top: 8rem;
+    }
+}
+@media (min-width: 1150px) {
+    .container {
+        margin-inline: auto;
+    }
+    .section {
+        padding-block: 4rem 2rem;
+    }
+
+    .nav_open,
+    .nav_close,
+    .nav_img-1,
+    .nav_img-2 {
+        display: none;
+    }
+
+    .nav_menu {
+        width: initial;
+    }
+
+    .nav_list {
+        display: flex;
+        flex-direction: row;
+        column-gap: 4rem;
+    }
+
+    .home_container {
+        grid-template-columns: 470px 550px;
+        column-gap: 3rem;
+    }
+
+    .home_title {
+        margin-bottom: 2rem;
+    }
+
+    .home_bread {
+        width: 80px;
+        left: 18rem;
+    }
+
+    .home_image {
+        max-width: initial;
+        width: 550px;
+    }
+
+    .home_location i {
+        font-size: 2rem;
+    }
+
+    .home_location span {
+        font-size: var(--normal-font-size);
+    }
+
+    .home_social {
+        column-gap: 1.5rem;
+    }
+
+    .new_container {
+        padding-top: 4rem;
+    }
+
+    .new_content {
+        grid-template-columns: repeat(3, 270px);
+        column-gap: 5.5rem;
+    }
+
+    .new_card {
+        flex-direction: column;
+        row-gap: 2rem;
+        text-align: center;
+    }
+
+    .new_title {
+        font-style: var(--h1-font-size);
+    }
+
+    .new_description{
+        font-size: var(--normal-font-size);
+        padding-inline: 1rem;
+    }
+
+    .new_img {
+        width: 250px;
+    }
+
+    .about_container {
+        grid-template-columns: 450px 430px;
+        column-gap: 7rem;
+    }
+
+    .about_img {
+        width: 450px;
+    }
+
+    .about_bread {
+        width: 90px;
+        bottom: -3rem;
+        right: 4rem;
+    }
+
+    .favorite_card {
+        padding: 9.75rem 1.5rem 2rem;
+    }
+
+    .favorite_img {
+        width: 180px;
+        top: -3rem;
+    }
+
+    .favorite_price {
+        font-size: var(--h3-font-size);
+    }
+
+    .favorite_button {
+        font-size: 1.5rem;
+        bottom: 2rem;
+        right: 1.5rem;
+    }
+
+    .visit_container {
+        padding-block: 4rem;
+    }
+
+    .visit_content {
+        grid-template-columns: 480px;
+    }
+
+    .footer {
+        padding-block: 5rem 3rem;
+    }
+
+    .footer_logo,
+    .footer_title {
+        margin-bottom: 1.5rem;
+    }
+
+    .footer_content {
+        column-gap: 4.5rem;
+    }
+    .footer_social {
+        column-gap: 1.5rem;
+    }
+
+    .footer_img-1 {
+        width: 90px;
+        right: initial;
+        left: 15rem;
+    }
+
+    .footer_img-2 {
+        width: 90px;
+        left: initial;
+        right: 7rem;
+    }
+
+    .footer_copy {
+        margin-top: 8rem;
+    }
+
+    .scrollup {
+        right: 3rem;
     }
 }
