--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -162,7 +162,32 @@ button {
     color: var(--black-color);
 }
 /* Button */
+/* Start Loading */
+.loading {
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--body-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
+.loading img {
+    width: 200px;
+    animation:rotate 4s linear infinite;
+}
+
+@keyframes rotate {
+    100% {
+        rotate: 360deg;
+    }
+}
+
+/* End Loading */
 /* Start Header */
 .header {
     position: fixed;
